--- a/video-work.html
+++ b/video-work.html
@@ -71,40 +71,42 @@
         </div>
     </div>
     <div id="content-top">
-        <!-- <div class="sticky-top">
-            <h2 class="content-heading font-color">Video Work</h2>
-            <div class="content-dashed-line"></div>
-        </div> -->
-        <div id="content">
-            <div class="mid-menu">
-                <div class="vid-menu-one">
-                    <a href="video-work.html" class="font-color vid-menu-active">Visualizers</a>
-                </div>
-                <div class="vid-menu-two">
-                    <a href="freelance.html" class="font-color vid-menu-inactive">Freelance</a>
-                </div>
+        <div class="mid-menu">
+            <div class="vid-menu-one">
+                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-active">Visualizers</a>
             </div>
+            <div class="vid-menu-one ">
+                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">freelance</a>
+            </div>
+            <div class="vid-menu-one">
+                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
+            </div>
+        </div>
+        <div class="content-dashed-line"></div>
+        <div id="content">
             <div id="visualizers">
                 <div class="projects">
                     <div class="video-img">
                         <img class="proj-img" src="./assets/images/space-men.jpeg" alt="">
                     </div>
                     <div class="title-container">
-                        <h4 class="proj-title">Space-Men Visualizer</h4>
-                        <p class="sub-desc font-color">5 min. 2O23</p>
-                        <p class="font-color proj-desc">
-                            An astronaut tries to save his crewmembers from a failing ship in this remix of Space-Men (Assignment: Outer Space) from 1960, directed by Antonio Margheriti.
-                            <br>
-                            <br>
-                            Created using TouchDesigner.
-                        </p>
+                        <div class="title-runtime">
+                            <h4 class="proj-title">Space-Men</h4>
+                            <p class="sub-desc font-color">5 min. 2O23</p>
+                        </div>
+                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
                         <div class="featured-track">
                             <img class="music-icon" src="/assets/images/icons/music.png" alt="">
                             <p class="font-color track-p">
                                  The Delfonics Theme (How Could You) by The Delfonics
                             </p>
                         </div>
-                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
+                        <p class="font-color proj-desc">
+                            An astronaut tries to save his crewmembers from a failing ship in this remix of Space-Men (Assignment: Outer Space) from 1960, directed by Antonio Margheriti.
+                            <br>
+                            <br>
+                            Created using TouchDesigner.
+                        </p>
                     </div>
                 </div>
                 <div class="projects">
@@ -112,23 +114,21 @@
                         <img class="proj-img" src="./assets/images/santo.jpeg" alt="">
                     </div>
                     <div class="title-container">
-                        <h4 class="proj-title">El Santo Visualizer</h4>
-                        <p class="sub-desc font-color">5 min. 2O23</p>
-                        <p class="font-color proj-desc">El Santo battles some of his biggest foes as they are mixed together with analog video feedback enveloping them in a technicolor lo-fi dreamscape.
-                            <br>
-                            <br>
-                        Footage was rescanned with a tape handycam, the output was plugged into a video mixer with a feedback of the same mixer being fed to itself as the B input. Using the built-in effects to morph the video results in a kaleidoscope of colors and violence.
-                            <br>
-                            <br>
-                        This project was created using equipment and knowledge provided by Phase Space NYC.
-                            <br>
+                        <div class="title-runtime">
+                            <h4 class="proj-title">El Santo</h4>
+                            <p class="sub-desc font-color">5 min. 2O23</p>
+                        </div>
+                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
                         <div class="featured-track">
                             <img class="music-icon" src="/assets/images/icons/music.png" alt="">
                             <p class="font-color track-p">
                                 Party Machine by Bruce Haack
                             </p>
                         </div>
-                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/ErilhrNfDMo" target=”_blank”>Watch on YOUTUBE</a></p>
+                        <p class="font-color proj-desc">El Santo battles some of his biggest foes as they are mixed together with analog video feedback enveloping them in a technicolor lo-fi dreamscape.
+                            <br>
+                            <br>
+                        Footage was rescanned with a tape handycam, the output was plugged into a video mixer with a feedback of the same mixer being fed to itself as the B input. Using the built-in effects to morph the video results in a kaleidoscope of colors and violence.
                     </p>
                     </div>
                 </div>
@@ -137,8 +137,11 @@
                         <img class="proj-img" src="./assets/images/wavy.jpeg" alt="">
                     </div>
                     <div class="title-container">
-                        <h4 class="proj-title">Wavy Silent Hour</h4>
-                        <p class="sub-desc font-color">1 hr. 2O23</p>
+                        <div class="title-runtime">
+                            <h4 class="proj-title">Wavy Silent Hour</h4>
+                            <p class="sub-desc font-color">1 hr. 2O23</p>
+                        </div>
+                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
                         <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
                         <br>
                         <br>
@@ -146,7 +149,6 @@
                         <br>
                         <br>    
                         Created using TouchDesigner.</p>
-                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
                 <div class="projects">
@@ -154,8 +156,11 @@
                         <img class="proj-img" src="./assets/images/frosty.png" alt="">
                     </div>
                     <div class="title-container">
-                        <h4 class="proj-title">Frosty Silent Hour</h4>
-                        <p class="sub-desc font-color">1 hr. 2O23</p>
+                        <div class="title-runtime">
+                            <h4 class="proj-title">Wavy Silent Hour</h4>
+                            <p class="sub-desc font-color">1 hr. 2O23</p>
+                        </div>
+                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
                         <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
                         <br>
                         <br>
@@ -163,7 +168,6 @@
                         <br>
                         <br>    
                         Created using TouchDesigner.</p>
-                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/lq0bo3wxtUY" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
             </div>
