--- a/video-work.html
+++ b/video-work.html
@@ -76,7 +76,7 @@
                 <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-active">Visualizers</a>
             </div>
             <div class="vid-menu-one ">
-                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">freelance</a>
+                <a href="freelance.html" class="sub-menu content-heading font-color vid-menu-inactive">freelance</a>
             </div>
             <div class="vid-menu-one">
                 <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
