--- a/freelance.html
+++ b/freelance.html
@@ -71,30 +71,32 @@
             </div>
     </div>
     <div id="content-top">
-        <!-- <div class="sticky-top">
-            <h2 class="content-heading font-color">Video Work</h2>
-            <div class="content-dashed-line"></div>
-        </div> -->
-        <div id="content">
-            <div class="mid-menu">
-                <div class="vid-menu-one">
-                    <a href="video-work.html" class="font-color vid-menu-inactive">Visualizers</a>
-                </div>
-                <div class="vid-menu-two">
-                    <a href="freelance.html" class="font-color vid-menu-active">Freelance</a>
-                </div>
+        <div class="mid-menu">
+            <div class="vid-menu-one">
+                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">Visualizers</a>
             </div>
+            <div class="vid-menu-one ">
+                <a href="freelance.html" class="sub-menu content-heading font-color vid-menu-active">freelance</a>
+            </div>
+            <div class="vid-menu-one">
+                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
+            </div>
+        </div>
+        <div class="content-dashed-line"></div>
+        <div id="content">
             <div id="visualizers">
                 <div class="projects">
                     <div class="video-img">
                         <img class="proj-img" src="./assets/images/pyramid-thieves.jpeg" alt="">
                     </div>
                     <div class="title-container">
-                        <h4 class="proj-title">Thunder – Music Video</h4>
-                        <p class="sub-desc font-color">4 min. 2O19</p>
+                        <div class="title-runtime">
+                            <h4 class="proj-title">Thunder/Pyramid Thieves</h4>
+                            <p class="sub-desc font-color">5 min. 2O23</p>
+                        </div>
+                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
                         <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. I undertook the roles of Editor, Visual Effects artist, and Director for the project.
                         </p>
-                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/wNJihWmU-iE" target=”_blank”>Watch on YOUTUBE</a></p>
                     </div>
                 </div>
             </div>
