--- a/video-work.html
+++ b/video-work.html
@@ -141,7 +141,8 @@
                             <h4 class="proj-title">Wavy Silent Hour</h4>
                             <p class="sub-desc font-color">1 hr. 2O23</p>
                         </div>
-                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
+                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
+                        <br>
                         <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
                         <br>
                         <br>
@@ -157,10 +158,11 @@
                     </div>
                     <div class="title-container">
                         <div class="title-runtime">
-                            <h4 class="proj-title">Wavy Silent Hour</h4>
+                            <h4 class="proj-title">Frosty Silent Hour</h4>
                             <p class="sub-desc font-color">1 hr. 2O23</p>
                         </div>
-                        <p class="proj-desc tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
+                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
+                        <br>
                         <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
                         <br>
                         <br>
