--- a/freelance.html
+++ b/freelance.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="title-container">
                         <div class="title-runtime">
-                            <h4 class="proj-title">Thunder/Pyramid Thieves</h4>
+                            <h4 class="proj-title">Thunder by Pyramid Thieves</h4>
                             <p class="sub-desc font-color">5 min. 2O23</p>
                         </div>
                         <p class="tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
