--- a/video-work.html
+++ b/video-work.html
@@ -82,7 +82,7 @@
                 <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
             </div>
         </div>
-        <div class="content-dashed-line"></div>
+        <div class="dashed-line"></div>
         <div id="content">
             <div id="visualizers">
                 <div class="projects">
