--- a/video-work.html
+++ b/video-work.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div id="content-top">
-        <div class="dashed-line"></div>
+        <div class="dashed-line mobile-only"></div>
         <div class="mid-menu">
             <div class="vid-menu-one">
                 <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-active">Visualizers</a>
@@ -83,6 +83,7 @@
                 <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
             </div>
         </div>
+        <div class="content-dashed-line"></div>
         <div id="content">
             <div id="visualizers">
                 <div class="projects">
