--- a/video-work.html
+++ b/video-work.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div id="content-top">
-        <div class="dashed-line mobile-only"></div>
+        <div class="content-dashed-line mobile-only"></div>
         <div class="mid-menu">
             <div class="vid-menu-one">
                 <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-active">Visualizers</a>
