--- a/freelance.html
+++ b/freelance.html
@@ -93,11 +93,11 @@
                     <div class="title-container">
                         <div class="title-runtime">
                             <h4 class="proj-title">Thunder by Pyramid Thieves</h4>
-                            <p class="sub-desc font-color">5 min. 2O23</p>
+                            <p class="sub-desc font-color">5 min. 2O19</p>
                         </div>
                         <p class="tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
                         <br>
-                        <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. I undertook the roles of Editor, Visual Effects artist, and Director for the project.
+                        <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. I was the Editor, Visual Effects artist, and Director for the project.
                         </p>
                     </div>
                 </div>
