--- a/video-work.html
+++ b/video-work.html
@@ -86,6 +86,7 @@
         <div class="content-dashed-line"></div>
         <div id="content">
             <div id="visualizers">
+                <h3 class="font-color">VIZS/MUSIC PAIRINGS</h3>
                 <div class="projects">
                     <div class="video-img">
                         <img class="proj-img" src="./assets/images/space-men.jpeg" alt="">
@@ -133,6 +134,9 @@
                     </p>
                     </div>
                 </div>
+                <br>
+                <br>
+                <h3 class="font-color">SILENT MAGIC HOUR SERIES</h3>
                 <div class="projects">
                     <div class="video-img">
                         <img class="proj-img" src="./assets/images/wavy.jpeg" alt="">
