--- a/freelance.html
+++ b/freelance.html
@@ -80,7 +80,7 @@
                 <a href="freelance.html" class="sub-menu content-heading font-color vid-menu-active">freelance</a>
             </div>
             <div class="vid-menu-one">
-                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
+                <a href="touchdesignr.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
             </div>
         </div>
         <div class="content-dashed-line"></div>
