--- a/freelance.html
+++ b/freelance.html
@@ -9,67 +9,63 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-    <title>FREDO WWORLDD</title>
+    <title>FREDO FREELNC</title>
 </head>
 <body>
-   <!-- <div id="banner">
-        <div id="scroll-text">
-            This is scrolling text.
-        </div>
-   </div> -->
-   <div id="nav-icon">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-  </div>
-   <div id="nav-section">
+<!-- Navigation section -->
+   <section id="nav-section">
+
+    <!-- Logo section -->
         <div class="logo-section">
             <a class="name font-color" href="index.html">WWWilfredooo HHHerreraaa</a>
-            <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt=""></a>
+            <p class="logo-subtitle font-color"> visuals maker</p>
+            <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt="radio icon"></a>
         </div>
+
         <div class="dashed-line"></div>
-        <div class="mobile-friendly">
-            <div id="about-me">
-                <p class="about font-color">Welcome to the digital archive of wil-fredo. Inside you’ll find projects created using different mediums to explore image distortion, music/visualizer pairings, and looped movements. These works were created using digital and/or analog tools.
+
+    <!-- Artist description -->
+        <div id="about-me">
+            <p class="font-color">Welcome to the digital archive of projects made by wilfredo (pronounced <i>wil-freh-doh</i>). These works were created using different digital and analog mediums exploring image distortion, looped movements, and music/visualizer pairings.
                     <br>
                     <br>
-                Wilfredo is a visual artist from the island of Puerto Rico based in Brooklyn, NY. His focus is in digital video manipulation and music visualizer pairings made with TouchDesigner.</p>
-            </div>
-                <div class="dashed-line"></div>
-                <div id="nav-menu">
-                    <div class="full-menu">
-                        <ul class="content-menu">
-                            <div class="nav-link">
-                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
-                                <li class="link"><a class="link active font-color" href="/video-work.html">Video work</a></li>
-                            </div>
-                            <!-- <div class="nav-link">
-                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
-                                <li class="link font-color"><a class="link font-color" href="mixes.html">Space traveler mixes</a></li>
-                            </div> -->
-                            <div class="nav-link">
-                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
-                                <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
-                            </div>
-                        </ul>
-                        <ul class="social-menu">
-                            <div class="nav-link">
-                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
-                                <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
-                            </div>
-                            <div class="nav-link">
-                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
-                                <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
-                            </div>
-                            <div class="nav-link">
-                                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="">
-                                <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>TikTok</a></li>
-                            </div>
-                        </ul>
-                    </div>
+            Fredo hails from the beautiful island of Puerto Rico. Currently based out of New York, his focus is in digital/analog video manipulation, generative art, and web development.</p>
+        </div>
+
+        <div class="dashed-line"></div>
+
+    <!-- Menu -->
+        <div class="menu-options">
+
+        <!-- Content menu -->
+            <ul class="content-menu">
+                <div class="nav-link">
+                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                    <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
                 </div>
-            </div>
-    </div>
+                <div class="nav-link">
+                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                    <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
+                </div>
+            </ul>
+
+        <!-- Social menu -->
+            <ul class="social-menu">
+                <div class="nav-link">
+                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
+                </div>
+                <div class="nav-link">
+                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
+                </div>
+                <div class="nav-link">
+                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>TikTok</a></li>
+                </div>
+            </ul>
+        </div>
+   </section>
     <div id="content-top">
         <div class="content-dashed-line mobile-only"></div>
         <div class="mid-menu">
