--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             </ul>
         </div>
    </section>
-    <div id="content-top">
-        <div id="content">
-            <div class="landing">
-                <img class="landing-img" src="./assets/images/project-gifs/video-game.gif" alt="">
-            </div>
-        </div>  
-    </div>
+
+<!-- Page Body -->
+    <section id="content-top">
+        <div class="landing">
+            <img class="landing-img" src="./assets/images/project-gifs/video-game.gif" alt="">
+        </div>
+    </section>
 
     <script src="./scripts/script.js"></script>
 </body>
